@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180722"
-#define public MagickPackageReleaseDate "snapshot-20180722"
+#define public MagickPackageVersionAddendum ".020180723"
+#define public MagickPackageReleaseDate "snapshot-20180723"
