@@ -1,0 +1,146 @@
+"100"
+"200"
+"300"
+"400"
+"500"
+"600"
+"700"
+"800"
+"900"
+"Center"
+"East"
+"North"
+"NorthEast"
+"NorthWest"
+"South"
+"SouthEast"
+"SouthWest"
+"West"
+"add"
+"affine"
+"all"
+"arc"
+"bevel"
+"bezier"
+"black"
+"bold"
+"border-color"
+"butt"
+"change-mask"
+"circle"
+"clear"
+"clip-path"
+"clip-rule"
+"clip-units"
+"color"
+"color-burn"
+"color-dodge"
+"condensed"
+"darken"
+"decorate"
+"difference"
+"dst"
+"dst-atop"
+"dst-in"
+"dst-out"
+"dst-over"
+"ellipse"
+"evenodd"
+"exclusion"
+"expanded"
+"extra-condensed"
+"extra-expanded"
+"fill"
+"fill-opacity"
+"fill-rule"
+"filltoborder"
+"floodfill"
+"font"
+"font-family"
+"font-size"
+"font-stretch"
+"font-style"
+"font-weight"
+"fuchsia"
+"gradient-units"
+"gravity"
+"hard-light"
+"image"
+"interline-spacing"
+"interword-spacing"
+"italic"
+"kerning"
+"lighten"
+"line"
+"line-through"
+"linear-light"
+"matte"
+"minus"
+"miter"
+"multiply"
+"none"
+"nonzero"
+"normal"
+"objectBoundingBox"
+"oblique"
+"offset"
+"opacity"
+"overlay"
+"overline"
+"path"
+"plus"
+"point"
+"polygon"
+"polyline"
+"pop clip-path"
+"pop defs"
+"pop gradient"
+"pop graphic-context"
+"pop pattern"
+"push clip-path"
+"push defs"
+"push gradient"
+"push graphic-context"
+"push pattern"
+"rectangle"
+"replace"
+"reset"
+"rotate"
+"round"
+"roundrectangle"
+"scale"
+"screen"
+"semi-condensed"
+"semi-expanded"
+"skewX"
+"skewY"
+"soft-light"
+"square"
+"src"
+"src-atop"
+"src-in"
+"src-out"
+"src-over"
+"stop-color"
+"stroke"
+"stroke-antialias"
+"stroke-dasharray"
+"stroke-dashoffset"
+"stroke-linecap"
+"stroke-linejoin"
+"stroke-miterlimit"
+"stroke-opacity"
+"stroke-width"
+"subtract"
+"text"
+"text-antialias"
+"text-undercolor"
+"translate"
+"ultra-condensed"
+"ultra-expanded"
+"underline"
+"userSpace"
+"userSpaceOnUse"
+"viewbox"
+"xor"
+"yellow"
