@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x211801
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 21,18,1
-#define MagickChangeDate   "20180722"
-#define MagickReleaseDate  "snapshot-20180722"
+#define MagickChangeDate   "20180723"
+#define MagickReleaseDate  "snapshot-20180723"
 	
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
